--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
             <artifactId>selenium-java</artifactId>
             <version>2.25.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
 
 </project>
